[gd_scene load_steps=4 format=3 uid="uid://bonmn4ve5bsch"]

[ext_resource type="Script" uid="uid://cdr2cm71uo1gb" path="res://Scripts/Dasher/dasher_single.gd" id="1_n3gtq"]
[ext_resource type="Texture2D" uid="uid://cuwu8m61x2gjg" path="res://Assets/Images/NEXTGAME.png" id="2_v6mph"]
[ext_resource type="Texture2D" uid="uid://cmrqjk7wkywsv" path="res://Assets/Images/PLAYAGAIN.png" id="3_n3gtq"]

[node name="DasherSingle" type="Node2D"]
script = ExtResource("1_n3gtq")

[node name="next_game" type="TextureButton" parent="."]
visible = false
offset_left = 18.0
offset_top = 788.0
offset_right = 703.0
offset_bottom = 902.0
texture_normal = ExtResource("2_v6mph")

[node name="play_again" type="TextureButton" parent="."]
offset_left = 22.0
offset_top = 658.0
offset_right = 707.0
offset_bottom = 772.0
texture_normal = ExtResource("3_n3gtq")

[node name="Game_Round" type="Label" parent="."]
offset_left = 44.0
offset_top = 245.0
offset_right = 660.0
offset_bottom = 398.0
theme_override_colors/font_color = Color(0.85098, 0.85098, 0.85098, 1)
theme_override_font_sizes/font_size = 112
text = "Catch"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[connection signal="pressed" from="next_game" to="." method="_on_next_game_pressed"]
[connection signal="pressed" from="play_again" to="." method="_on_play_again_pressed"]
